--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 asgiref==3.7.1
-Django==3.2
+Django==4.2.2
+django-cleanup==8.0.0
+django-debug-toolbar==4.1.0
 isort==5.12.0
+Pillow==9.5.0
+psycopg2==2.9.6
+python-dotenv==1.0.0
 pytz==2023.3
+sorl-thumbnail==12.9.0
 sqlparse==0.4.4
+tzdata==2023.3
