--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.1
 Django==4.2.2
 django-cleanup==8.0.0
 django-debug-toolbar==4.1.0
+django-tinymce==3.6.1
 isort==5.12.0
 Pillow==9.5.0
 psycopg2==2.9.6
