--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.7.1
 Django==4.2.2
+django-ckeditor==6.6.1
 django-cleanup==8.0.0
 django-debug-toolbar==4.1.0
+django-grappelli==3.0.6
+django-js-asset==2.1.0
 django-tinymce==3.6.1
 isort==5.12.0
 Pillow==9.5.0
