--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-tinymce==3.6.1
 isort==5.12.0
 Pillow==9.5.0
 psycopg2==2.9.6
+psycopg2-binary==2.9.6
 python-dotenv==1.0.0
 pytz==2023.3
 sorl-thumbnail==12.9.0
