--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
         {
             "src": "httpMonkey/wsgi.py",
             "use": "@vercel/python",
-            "config": {"maxLambdaSize": "15mb", "runtime": "python3.11"}
+            "config": {"maxLambdaSize": "15mb", "runtime": "python3.9"}
         },
         {
             "src": "build_files.sh",
@@ -21,7 +21,8 @@
         },
         {
             "src": "/(.*)",
-            "dest": "poll/httpMonkey.py"
+            "dest": "httpMonkey/wsgi.py"
         }
-    ]
+    ],
+    "outputDirectory": "staticfiles_build"
 }
