--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,27 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "httpMonkey/wsgi.py",
-            "use": "@vercel/python",
-            "config": {"maxLambdaSize": "15mb", "runtime": "python3.9"}
-        },
-        {
-            "src": "build_files.sh",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "staticfiles_build"
-            }
+      {
+        "src": "httpMonkey/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles"
         }
+      }
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "httpMonkey/wsgi.py"
-        }
-    ],
-    "outputDirectory": "staticfiles_build"
-}
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "httpMonkey/wsgi.py"
+      }
+    ]
+  }
